g_socket_connection_connect_async: handle cancellation

g_socket_connection_connect_finish() was returning TRUE when the
connection attempt got cancelled. Fix that by using
g_simple_async_result_set_check_cancellable(). (Git master doesn't
have the bug because GTask behaves that way by default.)

https://bugzilla.gnome.org/show_bug.cgi?id=686213